RenderTableCol::computePreferredLogicalWidths and RenderTableCol::layout should never be called https://bugs.webkit.org/show_bug.cgi?id=99861

Reviewed by Ojan Vafai.

Source/WebCore:

RenderTableCol's computePreferredLogicalWidths and layout's only purpose were to clear the preferred logical
widths dirty / layout flag so that we would properly propagate the information to our containing table. This
led to clunky code where the table layout code had to forcefully call RenderTableCol::computePreferredLogicalWidths
or else we would ignore the next layout hint on the <col> or <colgroup>.

Test: fast/table/col-span-change-relayout.html

* rendering/AutoTableLayout.cpp:
(WebCore::AutoTableLayout::recalcColumn):
* rendering/RenderTable.cpp:
(WebCore::RenderTable::layout):
Simplified the code now that we only need to iterate over the sections.

* rendering/FixedTableLayout.cpp:
(WebCore::FixedTableLayout::calcWidthArray):
Removed call to computePreferredLogicalWidths.

* rendering/RenderTableCol.cpp:
(WebCore::RenderTableCol::styleDidChange):
(WebCore::RenderTableCol::updateFromElement):
Forward a layout hint to the table so that we properly recompute the cell's logical withs.

(WebCore::RenderTableCol::computePreferredLogicalWidths):
(WebCore::RenderTableCol::layout):
Change our implementations of those 2 methods to be no-ops, while enforcing that they are
never called.

(WebCore::RenderTableCol::propagateLayoutCueToTable):
New helper function that forward any layout cue to the containing table, this works around
us not clearing the flags which confuses RenderObject markContainingBlocksForLayout and
invalidateContainerPreferredLogicalWidths.

* rendering/RenderTableCol.h:
Made the function that we are not expected to be called private.

LayoutTests:

Added this test as the code in RenderTableCol::updateFromElement wasn't properly covered.

* fast/table/col-span-change-relayout-expected.txt: Added.
* fast/table/col-span-change-relayout.html: Added.


Canonical link: https://commits.webkit.org/118069@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132149 268f45cc-cd09-0410-ab3c-d52691b4dbfc